--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -58,7 +58,7 @@ a {
     fill: white;
   }
 
-  .fullViewMenu{
+   .fullViewMenu{
     position: absolute;
     top: 0;
     left: 0;
@@ -175,5 +175,7 @@ a {
         align-items: center;
         min-width: 100vw;
         min-height: 100vh;
+        z-index: -10;
     }
+    
   }
