--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,7 +1,7 @@
 
 .homeContainer h1{
     max-width: 80vw;
-    margin: 100px 0  ;
+    margin: 40px 0  ;
 }
 .firstText{
     font-size: 28px;
